pricing header, bg and plans(form) alignment fixed on sm and md

--- a/styles/02-base/_typo.scss
+++ b/styles/02-base/_typo.scss
@@ -1484,6 +1484,12 @@ h4 {
       line-height: $font-24;
     }
 
+    &__plans {
+      header h2 {
+        font-size: $font-32;
+      }
+    }
+
     &__plans__form {
       .selection {
         font-size: $font-16;
